// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper component renders correctly for a non-root path 1`] = `
<div
  className="site"
>
  <Connect(Header)
    showSiteTitle={false}
  />
  child content
  <Footer />
  <Connect(SessionEndingAlert) />
</div>
`;

exports[`Wrapper component renders correctly in dev mode 1`] = `
<div
  className="site"
>
  <Connect(Header)
    showSiteTitle={true}
  />
  child content
  <Footer />
  <Connect(SessionEndingAlert) />
</div>
`;

exports[`Wrapper component renders correctly in non-dev mode 1`] = `
<div
  className="site"
>
  <Connect(Header)
    showSiteTitle={true}
  />
  child content
  <Footer />
  <Connect(SessionEndingAlert) />
</div>
`;

exports[`Wrapper component sets the appropriate CSS class if we are on a "gray" path renders correctly for the /login path 1`] = `
<div
  className="site site--gray"
>
  <Connect(Header)
    showSiteTitle={false}
  />
  child content
  <Footer />
  <Connect(SessionEndingAlert) />
</div>
`;
